--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predepoly": "npm run build",
+    "depoly": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://springhana.github.io/plan_page"
 }
